--- a/src/components/PricingSection.css
+++ b/src/components/PricingSection.css
@@ -5,7 +5,7 @@
 }
 
 .pricing {
-  padding: 16px 16px 24px;
+  padding: 28px 16px 24px;
 }
 
 .pricing__title {
